--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^1.0.1
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.0.1
   google_fonts: ^2.0.0
 
 dev_dependencies:
