--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^1.0.1
   cupertino_icons: ^1.0.2
+  firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
   google_fonts: ^2.0.0
 
