--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_chat_bubble: ^1.0.2
   flutter_local_notifications: ^5.0.0
   google_fonts: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
